--- a/source/sass/blocks/add-goods.scss
+++ b/source/sass/blocks/add-goods.scss
@@ -2,7 +2,7 @@
   padding: 25px 0 19px;
 
   @media (min-width: $medium-width) {
-    padding: 80px 0 19px;
+    padding: 83px 0 19px;
     margin-bottom: 53px;
   }
 
@@ -278,6 +278,7 @@
 
 .add-goods__link {
   padding: 6px 0;
+  width: auto;
 
   @media (min-width: $medium-width) {
     width: 100%;
