--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -15,6 +15,10 @@
     background: #5eaa2f;
   }
 
+  &:active .button__text {
+    color: rgba(255, 255, 255, 0.3);
+  }
+
   @media (min-width: $medium-width) {
     width: 244px;
   }
@@ -42,6 +46,20 @@
 
 .button--loadmore {
   background-color: #f2f2f2;
+  transition: all 0.3s ease 0s;
+
+  &:hover {
+    background: #ebebeb;
+  }
+
+  &:active {
+    background: #ebebeb;
+  }
+
+  &:active .button__text--loadmore {
+    color: $grey-text;
+    opacity: 0.3;
+  }
 }
 
 .button__text--loadmore {
