--- a/source/sass/blocks/buy-all.scss
+++ b/source/sass/blocks/buy-all.scss
@@ -21,6 +21,10 @@
     z-index: -2;
     background-size: cover;
 
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/catalog/cat-buy-all@2x.png");
+    }
+
     @media (min-width: $medium-width) {
       height: 200px;
       background-position-y: -320px;
@@ -58,15 +62,19 @@
 }
 
 .buy-all__image {
-  padding: 59px 101px 48px;
+  padding-bottom: 48px;
+  padding-top: 59px;
+  margin-left: auto;
+  margin-right: auto;
   display: block;
 
   @media (min-width: $medium-width) {
-    padding: 59px 79px 48px;
+    margin-left: 79px;
+    padding: 59px 0 48px;
   }
 
   @media (min-width: $large-width) {
-    padding: 57px 12px 32px 85px;
+    padding: 57px 0 32px;
   }
 }
 
