--- a/source/sass/blocks/container.scss
+++ b/source/sass/blocks/container.scss
@@ -6,11 +6,11 @@
   overflow: hidden;
 
   @media (min-width: $medium-width) {
-    width: $medium-width;
+    min-width: $medium-width;
   }
 
   @media (min-width: $large-width) {
-    width: $large-width;
+    min-width: $large-width;
   }
 }
 
@@ -27,6 +27,19 @@
   }
 }
 
+.container-content--respons {
+  width: 87.5%;
+  margin: 0 auto;
+
+  @media (min-width: $medium-width) {
+    width: 92.2%;
+  }
+
+  @media (min-width: $large-width) {
+    width: 84.7%;
+  }
+}
+
 .container--example {
   background-color: #eaeaea;
   position: relative;
@@ -40,11 +53,22 @@
       width: 100%;
       height: 619px;
       background-color: $white-color;
-      z-index: -3;
+      z-index: 0;
 
       @media (min-width: $large-width) {
-        height: 179px;
+        height: 142px;
       }
     }
+  }
+}
+
+.container-content--header {
+  @media (min-width: $medium-width) {
+    width: $medium-width - 60px;
+    margin: 0 auto;
+  }
+
+  @media (min-width: $large-width) {
+    width: 84.7%;
   }
 }
