--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -18,7 +18,7 @@
   }
 
   @media (min-width: $large-width) {
-    padding-bottom: 52px;
+    padding-bottom: 50px;
   }
 }
 
@@ -35,25 +35,6 @@
   }
 }
 
-.example__slider-wrapper {
-  position: relative;
-  width: 280px;
-  height: 256px;
-
-  @media (min-width: $medium-width) {
-    width: 560px;
-    height: 512px;
-    margin: 0 auto;
-  }
-
-  @media (min-width: $large-width) {
-    position: absolute;
-    top: 50px;
-    right: 1px;
-  }
-}
-
-
 .example__title {
   margin: 0;
   padding: 0;
@@ -63,18 +44,20 @@
   font-size: 36px;
   line-height: 40px;
   font-weight: 400;
+  letter-spacing: -0.03em;
   color: $black-color;
 
   @media (min-width: $medium-width) {
-    padding-top: 43px;
+    padding-top: 45px;
     padding-bottom: 63px;
     font-size: 60px;
     line-height: 60px;
-    letter-spacing: -0.03em;
   }
 
   @media (min-width: $large-width) {
-    padding-bottom: 146px;
+    padding-top: 0;
+    padding-bottom: 147px;
+    margin-top: 6px;
   }
 }
 
@@ -126,6 +109,7 @@
   font-weight: 400;
   color: $black-color;
   text-transform: uppercase;
+  letter-spacing: -0.02em;
   text-align: center;
 
   @media (min-width: $medium-width) {
@@ -133,120 +117,115 @@
     text-align: end;
     font-size: 20px;
     line-height: 25px;
+    padding-bottom: 20px;
   }
 
   @media (min-width: $large-width) {
+    display: flex;
+    gap: 65px;
     width: auto;
     text-align: start;
   }
 }
 
-.example__slider {
-  // sometext
-}
-
-
-.example__cats-image {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 256px;
-  background-size: contain;
-  background-repeat: no-repeat;
+.example__slider-wrapper {
+  padding: 0;
+  box-sizing: border-box;
+  display: grid;
+  place-content: center;
+  position: relative;
+  overflow: hidden;
+  --position: 50%;
 
   @media (min-width: $medium-width) {
     width: 560px;
     height: 512px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  @media (min-width: $large-width) {
+    position: absolute;
+    top: 0;
+    right: 0;
   }
 }
 
-.example__cats-image--slim {
-  z-index: 10;
-  left: 19px;
-  background-image: url("../img/example/after-cat.png");
+.example__slider {
+  max-width: 800px;
+  aspect-ratio: 280/256;
+
+  @media (min-width: $medium-width) {
+    aspect-ratio: 560/512;
+  }
+}
+
+.example__cats-image {
+  display: block;
+  max-width: 100%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: left;
 }
 
 .example__cats-image--fat {
-  z-index: 20;
-  width: 50%;
-  background-image: url("../img/example/before-cat.png");
-  background-repeat: no-repeat;
-  background-size: cover;
+  position: absolute;
+  inset: 0;
+  width: var(--position);
 }
 
 .example__range {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  z-index: 30;
-  width: 30px;
-  height: 30px;
-  transform: translate(-50%, -50%);
+  inset: 0;
+  cursor: pointer;
+  opacity: 0;
+  /* for Firefox */
+  width: 100%;
+  height: 100%;
 
-  &::before {
-    content: "";
-    position: absolute;
-    left: 13px;
-    z-index: -1;
-    top: -114px;
-    width: 4px;
-    height: 145px;
-    background: #666666;
-    border-radius: 2px;
+  &:hover ~ .example__range-line {
+    background-color: $green-btn;
   }
 
-  &::after {
-    content: "";
-    position: absolute;
-    left: 13px;
-    z-index: -1;
-    width: 4px;
-    top: -3px;
-    height: 145px;
-    background: #666666;
-    border-radius: 2px;
-  }
-
-  @media (min-width: $medium-width) {
-    display: flex;
-    justify-content: center;
-
-    &::before {
-      content: "";
-      position: absolute;
-      left: 13px;
-      z-index: -1;
-      top: -247px;
-      width: 4px;
-      height: 240px;
-      background: #666666;
-      border-radius: 2px;
-    }
-
-    &::after {
-      content: "";
-      position: absolute;
-      left: 13px;
-      z-index: -1;
-      width: 4px;
-      top: 25px;
-      height: 240px;
-      background: #666666;
-      border-radius: 2px;
-    }
+  &:active ~ .example__range-line {
+    background-color: #5eaa2f;
   }
 }
 
-.example__range-separator {
+.example__range-line {
   position: absolute;
-  top: -5px;
-  left: -4px;
-  width: 40px;
-  height: 40px;
-  background: no-repeat url("../img/example/separator.svg");
+  inset: 0;
+  width: 0.2rem;
+  height: 100%;
+  background-color: #666666;
+  left: var(--position);
+  transform: translateX(-50%);
+  pointer-events: none;
+}
 
-  @media (min-width: $medium-width) {
-    top: -11px;
+.example__range-button {
+  position: absolute;
+  display: grid;
+  place-items: center;
+  top: 50%;
+  left: var(--position);
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+}
+
+.slider-button-svg {
+  z-index: 40;
+
+  &:hover path {
+    fill: $green-btn;
   }
+
+  &:active path {
+    fill: #5eaa2f;
+  }
+}
+
+.example__cats-image--slim {
+  // sometext
 }
