--- a/source/sass/blocks/form-email-phone.scss
+++ b/source/sass/blocks/form-email-phone.scss
@@ -15,7 +15,7 @@
   position: relative;
   margin: 0;
   padding: 0;
-  padding-bottom: 35px;
+  padding-bottom: 33px;
   font-family: "Oswald", "Arial", sans-serif;
   font-size: 24px;
   line-height: 26px;
@@ -162,11 +162,21 @@
   font-weight: 400;
   box-sizing: border-box;
   text-transform: uppercase;
+  border-radius: none;
 
   &::placeholder {
     padding-right: 20px;
     color: #444444;
     opacity: 1;
+  }
+
+  &:hover {
+    border-color: #cdcdcd;
+  }
+
+  &:focus {
+    outline: none;
+    border: 2px solid $grey-text;
   }
 
   @media (min-width: $medium-width) {
@@ -175,6 +185,10 @@
     line-height: 30px;
     padding-left: 20px;
   }
+}
+
+.form-email-phone__field-text--error {
+  border: 2px solid #ff8282;
 }
 
 .form-email-phone__wrapper-item {
