--- a/source/sass/blocks/main-navigation.scss
+++ b/source/sass/blocks/main-navigation.scss
@@ -4,8 +4,8 @@
 
 .main-navigation__toggle {
   position: absolute;
-  top: -58px;
-  right: -9px;
+  top: -57px;
+  right: 11px;
   z-index: 2;
   display: block;
   width: 61px;
@@ -42,7 +42,7 @@
 
 .main-nav--opened .main-navigation__toggle {
   top: -58px;
-  right: -18px;
+  right: 0;
 
   &::before,
   &::after {
@@ -74,9 +74,11 @@
   margin: 0;
   padding: 0;
   list-style-type: none;
+  overflow: hidden;
 
   @media (min-width: $medium-width) {
     display: flex;
+    flex-wrap: wrap;
   }
 }
 
@@ -92,10 +94,9 @@
   .main-nav--opened .main-navigation__list {
     position: absolute;
     top: 0;
-    left: -20px;
     right: 0;
     z-index: 10;
-    min-width: 100vw;
+    width: 100vw;
     background-color: $white-color;
   }
 
@@ -121,6 +122,8 @@
   letter-spacing: -0.02em;
   text-transform: uppercase;
   color: #000000;
+  overflow: hidden;
+  transition: all 0.3s ease 0s;
 
   &:hover {
     opacity: 0.6;
@@ -135,8 +138,8 @@
       content: "";
       position: absolute;
       top: 0;
-      left: 0;
-      width: 100vw;
+      right: 0;
+      width: 100%;
       height: 1px;
       background-color: #e6e6e6;
     }
@@ -145,7 +148,7 @@
       content: "";
       position: absolute;
       top: 64px;
-      left: 0;
+      right: 0;
       width: 100vw;
       height: 1px;
       background-color: #e6e6e6;
@@ -166,7 +169,7 @@
 
   @media (min-width: $large-width) {
     display: inline-block;
-    padding: 69px 37px 88px 0;
+    padding: 69px 33px 88px 0;
     font-size: 20px;
     line-height: 30px;
     font-weight: 400;
@@ -176,18 +179,43 @@
 .main-navigation__link {
   color: #000000;
   text-decoration: none;
+
+
+  @media (min-width: $large-width) {
+    color: $white-color;
+  }
+}
+
+.main-navigation__link--inner {
+  @media (min-width: $large-width) {
+    color: $black-color;
+  }
 }
 
 .main-navigation__link--active {
-  position: relative;
+  @media (min-width: $medium-width) {
+    position: relative;
 
-  &::after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    top: 33px;
-    left: 0;
-    background-color: $green-btn;
+    &::after {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      top: 33px;
+      left: 0;
+      background-color: $green-btn;
+
+      @media (min-width: $large-width) {
+        background-color: $white-color;
+      }
+    }
+  }
+}
+
+.main-navigation__link--active--inner {
+  @media (min-width: $large-width) {
+    &::after {
+      background-color: $green-btn;
+    }
   }
 }
