--- a/source/sass/blocks/main-poster.scss
+++ b/source/sass/blocks/main-poster.scss
@@ -6,6 +6,7 @@
   }
 
   @media (min-width: $large-width) {
+    padding-top: 187px;
     padding-bottom: 267px;
   }
 
@@ -19,6 +20,10 @@
     background-size: cover;
     z-index: -2;
 
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/poster/back-cat@2x.png");
+    }
+
     @media (min-width: $medium-width) {
       display: none;
     }
@@ -27,12 +32,16 @@
       content: "";
       display: block;
       position: absolute;
-      top: -185px;
+      top: 0;
       right: 0;
-      width: 720px;
+      width: 50%;
       min-height: 694px;
       background-image: url("../img/poster/back-cat-desktop.png");
       z-index: -4;
+
+      @media (min-resolution: 2dppx) {
+        background-image: url("../img/poster/back-cat-desktop@2x.png");
+      }
     }
   }
 
@@ -54,10 +63,9 @@
       content: "";
       display: block;
       position: absolute;
-      top: -185px;
+      top: 0;
       left: 50%;
-      right: 0;
-      width: 720px;
+      width: 50%;
       min-height: 694px;
       background-color: rgba(104, 183, 56, 0.85);
       z-index: -3;
@@ -74,11 +82,12 @@
   line-height: 1;
   font-weight: 400;
   color: $white-color;
+  letter-spacing: -0.03em;
   text-align: center;
 
   @media (min-width: $medium-width) {
     width: 450px;
-    padding: 0 196px 41px 115px;
+    padding: 0 196px 41px 90px;
     font-size: 60px;
     line-height: 60px;
     font-weight: 400;
@@ -89,7 +98,7 @@
 
   @media (min-width: $large-width) {
     padding-top: 36px;
-    padding-left: 190px;
+    padding-left: 80px;
   }
 }
 
@@ -107,7 +116,7 @@
   box-sizing: border-box;
 
   @media (min-width: $medium-width) {
-    padding: 0 190px 49px 120px;
+    padding: 0 190px 49px 90px;
     font-size: 20px;
     line-height: 20px;
     color: $black-color;
@@ -116,17 +125,12 @@
   }
 
   @media (min-width: $large-width) {
-    padding-left: 190px;
+    padding-left: 80px;
   }
 
   &:active {
     color: rgba(#ffffff, 0.3);
   }
-}
-
-.image-wrapper {
-  width: 280px;
-  margin: 0 auto;
 }
 
 .main-poster__image {
@@ -138,14 +142,17 @@
 
   @media (min-width: $medium-width) {
     position: absolute;
+    width: 709px;
+    height: 609px;
     top: 200px;
-    left: 230px;
     z-index: -2;
   }
 
   @media (min-width: $large-width) {
-    top: 200px;
-    left: 590px;
+    top: 142px;
+    left: 38.7%;
+    width: 552px;
+    height: 499px;
   }
 }
 
@@ -165,11 +172,11 @@
   box-sizing: border-box;
 
   @media (min-width: $medium-width) {
-    margin-left: 120px;
+    margin-left: 90px;
     padding: 10px;
   }
 
   @media (min-width: $large-width) {
-    margin-left: 190px;
+    margin-left: 80px;
   }
 }
