--- a/source/sass/blocks/page-body.scss
+++ b/source/sass/blocks/page-body.scss
@@ -1,5 +1,6 @@
 .page-body {
   min-height: 100%;
+  position: relative;
   margin: 0;
   padding: 0;
   font-family: "Oswald", "Arial", sans-serif;
@@ -10,9 +11,5 @@
 
 
 .page-body__header-wrapper {
-  margin: 20px 10px 0 20px;
-
-  @media (min-width: $medium-width) {
-    width: $medium-width - 60px;
-  }
+  // sometext
 }
