--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -45,6 +45,7 @@
   margin: 0;
   padding: 5px;
   list-style-type: none;
+  transition: all 0.3s ease 0s;
 
   &:last-child {
     padding-left: 9px;
@@ -52,7 +53,17 @@
 }
 
 .social__link {
-  // sometext
+  &:hover .social__icon path {
+    fill: $green-btn;
+  }
+
+  &:active .social__icon {
+    opacity: 0.3;
+  }
+
+  &:active .social__icon path {
+    fill: $green-btn;
+  }
 }
 
 .social__link--vkontakte {
