--- a/source/sass/blocks/form-email-phone.scss
+++ b/source/sass/blocks/form-email-phone.scss
@@ -155,6 +155,7 @@
   height: 46px;
   margin: 0;
   padding-left: 11px;
+  padding-right: 44px;
   border: 1px solid #e7e7e7;
   font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
