--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -10,3 +10,7 @@ $white-color: #ffffff;
 $green-btn: #68b738;
 $black-color: #000000;
 $grey-text: #444444;
+
+
+// resolution
+$retina-resolution: 2dppx;
