--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -27,7 +27,8 @@
       position: absolute;
       top: 0;
       right: 0;
-      width: 100%;
+      left: -6.5vw;
+      width: 100vw;
       height: 1px;
       background-color: #e6e6e6;
     }
@@ -87,7 +88,8 @@
       position: absolute;
       top: 0;
       right: 0;
-      width: 100%;
+      left: -6.5vw;
+      width: 100vw;
       height: 1px;
       background-color: #e6e6e6;
     }
