--- a/source/sass/blocks/feature.scss
+++ b/source/sass/blocks/feature.scss
@@ -70,7 +70,7 @@
       position: absolute;
       font-size: 280px;
       line-height: 280px;
-      color: #f2f2f2;
+      color: $loadmore-btn;
       text-align: center;
       margin: 5px 10px;
       top: -46px;
@@ -93,7 +93,7 @@
   font-size: 14px;
   line-height: 18px;
   font-weight: 400;
-  color: #444444;
+  color: $grey-text;
 
   @media (min-width: $medium-width) {
     width: 245px;
