--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -9,7 +9,7 @@
       left: 0;
       width: 100%;
       height: 1px;
-      background-color: #e6e6e6;
+      background-color: $grey-line;
     }
 
     &::after {
@@ -19,7 +19,7 @@
       left: 0;
       width: 100%;
       height: 1px;
-      background-color: #e6e6e6;
+      background-color: $grey-line;
     }
   }
 }
