--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -8,11 +8,11 @@
   transition: all 0.3s ease 0s;
 
   &:hover {
-    background: #5eaa2f;
+    background: $hover-btn;
   }
 
   &:active {
-    background: #5eaa2f;
+    background: $hover-btn;
   }
 
   &:active .button__text {
@@ -45,15 +45,15 @@
 }
 
 .button--loadmore {
-  background-color: #f2f2f2;
+  background-color: $loadmore-btn;
   transition: all 0.3s ease 0s;
 
   &:hover {
-    background: #ebebeb;
+    background: $grey-line;
   }
 
   &:active {
-    background: #ebebeb;
+    background: $grey-line;
   }
 
   &:active .button__text--loadmore {
