--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -30,7 +30,7 @@
       left: -6.5vw;
       width: 100vw;
       height: 1px;
-      background-color: #e6e6e6;
+      background-color: $grey-line;
     }
 
     &::after {
@@ -40,7 +40,7 @@
       right: 0;
       width: 100%;
       height: 1px;
-      background-color: #e6e6e6;
+      background-color: $grey-line;
     }
   }
 
@@ -91,7 +91,7 @@
       left: -6.5vw;
       width: 100vw;
       height: 1px;
-      background-color: #e6e6e6;
+      background-color: $grey-line;
     }
   }
 }
