--- a/source/sass/blocks/collaboration.scss
+++ b/source/sass/blocks/collaboration.scss
@@ -33,7 +33,7 @@
   font-size: 16px;
   line-height: 20px;
   font-weight: 400;
-  color: #111111;
+  color: $title-color;
   text-transform: uppercase;
   letter-spacing: -0.03em;
 
