--- a/source/sass/blocks/our-programs.scss
+++ b/source/sass/blocks/our-programs.scss
@@ -7,7 +7,7 @@
 }
 
 .our-programs__wrapper {
-  background-color: #f2f2f2;
+  background-color: $loadmore-btn;
   margin-bottom: 20px;
 
   @media (min-width: $medium-width) {
@@ -112,7 +112,7 @@
   font-size: 14px;
   line-height: 18px;
   font-weight: 400;
-  color: #444444;
+  color: $grey-text;
 
   @media (min-width: $medium-width) {
     padding-left: 0;
