--- a/source/sass/blocks/card-cart.scss
+++ b/source/sass/blocks/card-cart.scss
@@ -102,12 +102,15 @@
 }
 
 .card-cart__image--small {
+  margin-top: 20px;
+
   @media (min-width: $medium-width) {
     margin-top: 26px;
   }
 
   @media (min-width: $large-width) {
     margin: 0;
+    margin-top: -2px;
   }
 }
 
@@ -129,7 +132,7 @@
   margin: 0;
   padding: 0;
   padding-bottom: 14px;
-  padding-right: 34px;
+  padding-right: 35px;
   font-family: "Oswald", "Arial", sans-serif;
   font-style: normal;
   font-size: 16px;
@@ -143,7 +146,7 @@
     font-size: 20px;
     line-height: 24px;
     padding-left: 45px;
-    padding-bottom: 20px;
+    padding-bottom: 21px;
     width: 165px;
     text-align: center;
     box-sizing: content-box;
@@ -225,14 +228,22 @@
   }
 }
 
-.card-cart--loadmore__image {
+.card-cart__image--loadmore {
   display: block;
   margin-left: auto;
   margin-right: auto;
   padding-top: 4px;
+  object-fit: contain;
 
   @media (min-width: $medium-width) {
+    min-height: auto;
+    min-width: auto;
     width: 60px;
+    margin-bottom: -2px;
+  }
+
+  @media (min-width: $large-width) {
+    margin-bottom: 0;
   }
 }
 
