--- a/source/sass/blocks/form-comment.scss
+++ b/source/sass/blocks/form-comment.scss
@@ -103,6 +103,8 @@
   height: 150px;
   margin: 0;
   padding: 0;
+  padding-left: 14px;
+  padding-top: 10px;
   font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
   line-height: 18px;
